--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <header class="header">
       <img class="Logo1" src="./images/logo/Reservia.svg" alt="Reservia">
        <nav class="navigation">
-       <a class="navperm navperm1" href="#hebergement">Hébergement</a>
+       <a class="navperm navperm1" href="#hebergement">Hébergements</a>
        <a class="navperm" href="#activity">Activités</a>
        </nav>
        <a class="inscription" href="#">S'inscrire</a>
@@ -75,7 +75,7 @@
     <section class="hebergement" id="hebergement">
       <div class="hebergementContain">
         <header class="hebergementContainheader">
-          <h2 class="hebergementContainTitreheader">Hébergement à Marseille</h2>
+          <h2 class="hebergementContainTitreheader">Hébergements à Marseille</h2>
         </header>
         <article class="hebergementContainpic">
           <a href="#">
@@ -343,7 +343,7 @@
       <div class="footerbasebas">
         <h3 class="footerbasebastitre">Nos hébergement</h3>
         <a href="#" class="footerbasebaslien">Charte qualité</a>
-        <a href="#" class="footerbasebaslien">Soumettre votre hotel</a>
+        <a href="#" class="footerbasebaslien">Soumettre votre hôtel</a>
       </div>
       <div class="footerbasebas">
         <h3 class="footerbasebastitre">Assitance</h3>
