--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
         <h3 class="footerbasebastitre">À propos</h3>
         <a href="#" class="footerbasebaslien">Fonctionnement du site</a>
         <a href="#" class="footerbasebaslien">Conditions générales de vente</a>
-        <a href="#" class="footerbasebaslien">Données et confidentialités</a>
+        <a href="#" class="footerbasebaslien">Données et confidentialité</a>
       </div>
       <div class="footerbasebas">
         <h3 class="footerbasebastitre">Nos hébergement</h3>
