--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
         <a href="#" class="footerbasebaslien">Données et confidentialité</a>
       </div>
       <div class="footerbasebas">
-        <h3 class="footerbasebastitre">Nos hébergement</h3>
+        <h3 class="footerbasebastitre">Nos hébergements</h3>
         <a href="#" class="footerbasebaslien">Charte qualité</a>
         <a href="#" class="footerbasebaslien">Soumettre votre hôtel</a>
       </div>
