--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
         <!-- Hebergement Populaire --> 
       <aside class="populaire">
-        <h2 class="populaireTitre">Les plus populaire <i class="fas fa-chart-line"></i></h2>
+        <h2 class="populaireTitre">Les plus populaires <i class="fas fa-chart-line"></i></h2>
         <article class="populaireArticle">
           <a class="populaireArticlelien" href="#">
             <div class="populaireArticleLien2">
@@ -318,7 +318,7 @@
             src="./images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" 
             alt="Longue vue sur terre en premier plan, mer en second plan et ile en troisième plan">
         </div>
-        <h3 class="activitypictitre">Île du Frioul</h3>
+        <h3 class="activitypictitre">Îles du Frioul</h3>
       </a>
       <a href="#" class="activitys a6">
         <div class="activitypiclienimg">
